--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
           <span>*</span><br />
         </div>
         <div id="query">
-  What is your query about? <span>*</span> <br /> 
+  What is your query about? <span>*</span> <br /> <br>
       <input type="radio" name="category" id="vol" value="volunteering" />
       <label for="vol">Volunteering</label> 
       <input type="radio" name="category" id="donation" value="donation" />
@@ -60,7 +60,7 @@
       <input type="radio" name="category" id="other" value="other" checked/>
       <label for="other">Others</label> <br /></div>
       <div>
-  Write your comments here! <span>*</span><br /> 
+  Write your comments here! <span>*</span><br /> <br>
         <textarea name="comments" id="comments" cols="50" rows="5"></textarea><br />
         </div>
         <div>
