--- a/page1_belugawhale.html
+++ b/page1_belugawhale.html
@@ -28,6 +28,7 @@
     <div class="navclass"></div>
     <main>
       <!-- heading and main image -->
+      <div id="fullContent">
       <div class="section1">
         <img
           id="mainimage"
@@ -41,7 +42,7 @@
       </div>
       <!-- content begins -->
       <div class="intro">
-        <div class="intropara">
+        <div id="intropara">
           <p>
             The beluga is also called the white whale because of its milky white
             skin and is the only whale species that is completely white. It is
@@ -215,6 +216,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </main>
     <!-- content ends -->
     <!-- footer -->
