--- a/page3_moose.html
+++ b/page3_moose.html
@@ -28,6 +28,7 @@
     <div class="navclass"></div>
     <main>
       <!-- heading and main image -->
+      <div id="fullContent">
       <div class="section1">
         <div>
           <img id="mainimage" src="../images/moose/moose.jpg" alt="Moose" />
@@ -39,7 +40,7 @@
       </div>
       <!-- content begins -->
       <div class="intro">
-        <div class="intropara">
+        <div id="intropara">
           <p>
             Moose are one of the northern hemisphere’s largest land mammals and
             the largest members of the deer family. Their coloring ranges from
@@ -244,6 +245,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </main>
     <!-- content ends -->
     <!-- footer -->
