--- a/page2_brownbear.html
+++ b/page2_brownbear.html
@@ -28,6 +28,7 @@
     <div class="navclass"></div>
     <!-- heading and main image -->
     <main>
+      <div id="fullContent">
       <div class="section1">
         <img
           id="mainimage"
@@ -41,7 +42,7 @@
       </div>
       <!-- content begins -->
       <div class="intro">
-        <div class="intropara">
+        <div id="intropara">
           <p>
             The Brown bear is a large mammal with a notable hump of muscles over
             its shoulders. This animal is the second largest species of bear.
@@ -223,6 +224,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </main>
     <!-- content ends -->
     <!-- footer -->
