--- a/polarbear.html
+++ b/polarbear.html
@@ -132,7 +132,8 @@
             </section>
         </div>
     </div>
-    <button id="totopbutton" onclick="toTop()">Back to Top</button>
+    <button id="funfactsbutton" onclick="alertRandomFunFact()">FUN FACTS FOR KIDS</button>
+    <button id="totopbutton" onclick="toTop()">BACK TO TOP</button>
     <div class="footerclass"></div>
   </body>
 </html>
@@ -144,6 +145,16 @@
         $(".footerclass").load("footer.html");
      } );
 
-     const toTop = () => window.scrollTo({top: 0, behavior: 'smooth'});
-        
+    // function that brings you to top of page
+    const toTop = () => window.scrollTo({top: 0, behavior: 'smooth'});
+    // function that alerts a random fun fact
+    alertRandomFunFact = function() {
+    let facts = new Array();
+        facts[0] = "Polar bears are marine mammals because they spend many months of the year at sea. However, they are the only living marine mammals with powerful, large limbs and feet that allow them to cover kilometers on foot and run on land.";
+        facts[1] = "A Polar bear's fur is hollow and reflects light, so it is not actually white. Their fur is also water repellent and oily. The bears can shake themselves dry after a swim.";
+        facts[2] = "Female Polar bears are known to be very good mothers and may adopt other cubs.";
+        facts[3] = "A Polar bear is strong enough to kill an animal by giving it one blow with its paw.";
+        let rand = Math.floor(Math.random()*facts.length);
+        window.alert(facts[rand]);
+    }
 </script>
