--- a/beaver.html
+++ b/beaver.html
@@ -133,8 +133,9 @@
                 </p>
             </section>
         </div>
-       
     </div>
+    <button id="funfactsbutton" onclick="alertRandomFunFact()">FUN FACTS FOR KIDS</button>
+    <button id="totopbutton" onclick="toTop()">BACK TO TOP</button>
     <div class="footerclass"></div>
   </body>
 </html>
@@ -145,5 +146,18 @@
      $(function(){
         $(".footerclass").load("footer.html");
      } );
+
+    // function that brings you to top of page
+    const toTop = () => window.scrollTo({top: 0, behavior: 'smooth'});
+    // function that alerts a random fun fact
+    alertRandomFunFact = function() {
+    let facts = new Array();
+        facts[0] = "Teeth of beavers never stop growing, so they gnaw on trees in order to prevent teeth from becoming too long.";
+        facts[1] = "Beavers use their tails for swimming as well as flapping the water in order to scare predators away.";
+        facts[2] = "Beavers have transparent eyelids, serving as underwater glasses and helping them see clearly under the water.";
+        facts[3] = "Cases are known, when beavers' and muskrats' families share one lodge together!";
+        let rand = Math.floor(Math.random()*facts.length);
+        window.alert(facts[rand]);
+    }
         
 </script>
