project phase 2 and 3

--- a/Arctic Fox.html
+++ b/Arctic Fox.html
@@ -46,11 +46,23 @@
         </h1>
         <div id="div2">
           <img
-            id="class0"
+            id="class00"
             src="https://animalia-bio.us-east-1.linodeobjects.com/animals/photos/full/1.25x1/A2TPwIwbvmn5U2l2IABr.webp"
             alt="arctic fox"
           />
         </div>
+        <div id="slides"> 
+          <img src="https://animalia-bio.us-east-1.linodeobjects.com/animals/photos/full/1.25x1/A2TPwIwbvmn5U2l2IABr.webp"
+               alt="arctic fox">
+          <img src="Images/af1.jfif"
+               alt="arctic fox">
+          <img src="Images/af2.jpg" 
+               alt="arctic fox">
+          <img src="Images/af3.jpg"
+               alt="arctic fox">
+          <img src="Images/af4.jfif"
+               alt="arctic fox">
+      </div>
         <br />
         <p class="class1">POPULATION SIZE: UNKNOWN</p>
         <p class="class1">LIFE SPAN: 3-14 YRS</p>
@@ -232,6 +244,7 @@
         />
         </div>
       </div>
+      <script src="JS/animal.js"></script>
     </section>
     <div class="footerclass"></div>
   </body>
