--- a/Killer Whale.html
+++ b/Killer Whale.html
@@ -45,11 +45,23 @@
         </h1>
         <div id="div2">
           <img
-            id="class0"
+            id="class00"
             src="Images/KillerWhale1.jfif"
             alt="killer whale"
           />
         </div>
+        <div id="slides"> 
+          <img src="Images/KillerWhale1.jfif"
+               alt="killer whale">
+          <img src="Images/kw1.jfif"
+               alt="killer whale">
+          <img src="Images/kw2.webp" 
+               alt="killer whale">
+          <img src="Images/kw3.jpg"
+               alt="killer whale">
+          <img src="Images/kw4.jpg"
+               alt="killer whale">
+      </div>
         <br />
         <p class="class1">POPULATION SIZE: 50,000</p>
         <p class="class1">LIFE SPAN: 30-100 YRS</p>
@@ -175,6 +187,7 @@
         />
         </div>
       </div>
+      <script src="JS/animal.js"></script>
     </section>
     <div class="footerclass"></div>
   </body>
