--- a/Arctic Hare.html
+++ b/Arctic Hare.html
@@ -43,13 +43,25 @@
         </h1>
         <div id="div2">
           <img
-            id="class0"
-            src="Images/ArcticHare1.jpg"
+            id="class00"
+            src="Images/ArcticHare1.png"
             alt="arctic hare"
             width="25%"
             height="25%"
           />
         </div>
+        <div id="slides"> 
+          <img src="Images/ArcticHare1.png"
+               alt="arctic hare">
+          <img src="Images/ah1.jfif"
+               alt="arctic hare">
+          <img src="Images/ah2.jfif" 
+               alt="arctic hare">
+          <img src="Images/ah3.jpg"
+               alt="arctic hare">
+          <img src="Images/ah4.jfif"
+               alt="arctic hare">
+      </div>
         <br />
         <p class="class1">POPULATION SIZE: UNKNOWN</p>
         <p class="class1">LIFE SPAN: 3-8 YRS</p>
@@ -180,6 +192,7 @@
         />
         </div>
       </div>
+      <script src="JS/animal.js"></script>
     </section>
     <div class="footerclass"></div>
   </body>
