project phase 2 and 3

--- a/Arctic Hare.html
+++ b/Arctic Hare.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>CAN SAVE - ARCTIC HARE</title>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="Images/Thumbnail.png" />
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="Images/Thumbnail.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Architects+Daughter&family=Edu+TAS+Beginner:wght@600&family=Gemunu+Libre:wght@700&family=Permanent+Marker&family=Roboto:wght@300&family=Yeseva+One&display=swap" rel="stylesheet">
@@ -14,18 +14,18 @@
       due to its wide spread area and climate. Every life is important 
       in the world , so it is our sole responsibility to protect them 
       from getting extincted and make sure their survival."
-    />
+    >
     <meta
       name="keywords"
       content="Canada,save,animal,save Canada,protect 
       animals,responsibility,NGO,Animal protection act,
       reindeer,whales,rabits,dogs,moose,beavers,hare,fox"
-    />
-    <link rel="stylesheet" href="CSS/home.css" />
-    <link rel="stylesheet" href="CSS/footer.css" />
-    <link rel="stylesheet" href="CSS/common.css" />
-    <link rel="stylesheet" href="CSS/header.css" />
-    <link rel="stylesheet" href="CSS/Arctic Hare.css" />
+    >
+    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/common.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/ArcticHare.css">
   </head>
 
   <body>
@@ -48,7 +48,7 @@
             alt="arctic hare"
             width="25%"
             height="25%"
-          />
+          >
         </div>
         <div id="slides"> 
           <img src="Images/ArcticHare1.png"
@@ -62,13 +62,13 @@
           <img src="Images/ah4.jfif"
                alt="arctic hare">
       </div>
-        <br />
+        <br>
         <p class="class1">POPULATION SIZE: UNKNOWN</p>
         <p class="class1">LIFE SPAN: 3-8 YRS</p>
         <p class="class1">TOP SPEED: 64 KM/H</p>
         <p class="class1">WEIGHT: 2.5-5.5 KG</p>
         <p class="class1">LENGTH: 43-70 CM</p>
-        <br /><br />
+        <br><br>
 
         <p
           class="class1"
@@ -102,7 +102,7 @@
             alt="canada on globe"
             width="25%"
             height="25%"
-          />
+          >
         </div>
 
         <div class="class5">
@@ -112,7 +112,7 @@
           alt="arctic hare"
           width="40%"
           height="40%"
-        />
+        >
           <div>
             <h1>Habits and Lifestyle</h1>
             <p>
@@ -134,7 +134,7 @@
           alt="arctic hare"
           width="40%"
           height="40%"
-        />
+        >
         </div>
         
         <div class="class9">
@@ -144,7 +144,7 @@
           alt="arctic hare"
           width="40%"
           height="40%"
-        />
+        >
           <div>
             <h1>Population</h1>
             <h2>Population Numbers</h2>
@@ -189,7 +189,7 @@
           alt="arctic hare"
           width="600px"
           height="350px"
-        />
+        >
         </div>
       </div>
       <script src="JS/animal.js"></script>
