--- a/Arctic Fox.html
+++ b/Arctic Fox.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <title>CAN SAVE - ARCTIC FOX</title>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="Images/Thumbnail.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="Images/Thumbnail.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Edu+TAS+Beginner:wght@600&family=Gemunu+Libre:wght@700&family=Permanent+Marker&family=Reggae+One&family=Roboto:wght@300&family=Yeseva+One&display=swap"
       rel="stylesheet"
-    />
+    >
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <meta
       name="description"
@@ -17,18 +17,18 @@
       due to its wide spread area and climate. Every life is important 
       in the world , so it is our sole responsibility to protect them 
       from getting extincted and make sure their survival."
-    />
+    >
     <meta
       name="keywords"
       content="Canada,save,animal,save Canada,protect 
       animals,responsibility,NGO,Animal protection act,
       reindeer,whales,rabits,dogs,moose,beavers,hare,fox"
-    />
-    <link rel="stylesheet" href="CSS/home.css" />
-    <link rel="stylesheet" href="CSS/footer.css" />
-    <link rel="stylesheet" href="CSS/common.css" />
-    <link rel="stylesheet" href="CSS/header.css" />
-    <link rel="stylesheet" href="CSS/Arctic Fox.css" />
+    >
+    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/common.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/ArcticFox.css">
   </head>
 
   <body>
@@ -49,7 +49,7 @@
             id="class00"
             src="https://animalia-bio.us-east-1.linodeobjects.com/animals/photos/full/1.25x1/A2TPwIwbvmn5U2l2IABr.webp"
             alt="arctic fox"
-          />
+          >
         </div>
         <div id="slides"> 
           <img src="https://animalia-bio.us-east-1.linodeobjects.com/animals/photos/full/1.25x1/A2TPwIwbvmn5U2l2IABr.webp"
@@ -63,14 +63,14 @@
           <img src="Images/af4.jfif"
                alt="arctic fox">
       </div>
-        <br />
+        <br>
         <p class="class1">POPULATION SIZE: UNKNOWN</p>
         <p class="class1">LIFE SPAN: 3-14 YRS</p>
         <p class="class1">TOP SPEED: 45 KM/H</p>
         <p class="class1">WEIGHT: 1.4-9.4 KG</p>
         <p class="class1">HEIGHT: 25-30 CM</p>
         <p class="class1">LENGTH: 52-55 CM</p>
-        <br /><br />
+        <br><br>
 
         <p
           class="class1"
@@ -81,11 +81,11 @@
           "
         >
           The Arctic fox is a small fox well adapted to living in cold
-          environments of Arctic regions. <br />
+          environments of Arctic regions. <br>
           It has a deep thick fur which is white in winter and brown in summer.
-          <br />
+          <br>
           The Arctic fox can stay warm in winter not just because of its thick
-          coat <br />
+          coat <br>
           but because of its generally rounded body shape with short legs, bushy
           tail, small rounded ears, and short muzzle.
         </p>
@@ -104,7 +104,7 @@
             alt="canada on globe"
             width="30%"
             height="30%"
-          />
+          >
         </div>
 
         <div class="class5">
@@ -114,7 +114,7 @@
           alt="arctic fox"
           height="30%"
           width="30%"
-        />
+        >
           <div>
             <h1>Habits and Lifestyle</h1>
             <p>
@@ -152,7 +152,7 @@
           alt="arctic fox"
           width="40%"
           height="40%"
-        />
+        >
         </div>
         
         <div class="class9">
@@ -162,7 +162,7 @@
           alt="arctic fox"
           width="40%"
           height="40%"
-        />
+        >
           <div>
             <h1>Population</h1>
             <h2>Population Numbers</h2>
@@ -241,7 +241,7 @@
           alt="arctic fox"
           width="600px"
           height="350px"
-        />
+        >
         </div>
       </div>
       <script src="JS/animal.js"></script>
