--- a/Killer Whale.html
+++ b/Killer Whale.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title>CAN SAVE - KILLER WHALE</title>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="Images/Thumbnail.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="Images/Thumbnail.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Edu+TAS+Beginner:wght@600&family=Gemunu+Libre:wght@700&family=Orbitron:wght@900&family=Permanent+Marker&family=Roboto:wght@300&family=Yeseva+One&display=swap" rel="stylesheet">
@@ -16,18 +16,18 @@
       due to its wide spread area and climate. Every life is important 
       in the world , so it is our sole responsibility to protect them 
       from getting extincted and make sure their survival."
-    />
+    >
     <meta
       name="keywords"
       content="Canada,save,animal,save Canada,protect 
       animals,responsibility,NGO,Animal protection act,
       Raindeer,whales,rabits,dogs,moose,beevers"
-    />
-    <link rel="stylesheet" href="CSS/home.css" />
-    <link rel="stylesheet" href="CSS/footer.css" />
-    <link rel="stylesheet" href="CSS/common.css" />
-    <link rel="stylesheet" href="CSS/header.css" />
-    <link rel="stylesheet" href="CSS/Killer Whale.css" />
+    >
+    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/common.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/KillerWhale.css">
   </head>
 
   <body>
@@ -48,7 +48,7 @@
             id="class00"
             src="Images/KillerWhale1.jfif"
             alt="killer whale"
-          />
+          >
         </div>
         <div id="slides"> 
           <img src="Images/KillerWhale1.jfif"
@@ -62,13 +62,13 @@
           <img src="Images/kw4.jpg"
                alt="killer whale">
       </div>
-        <br />
+        <br>
         <p class="class1">POPULATION SIZE: 50,000</p>
         <p class="class1">LIFE SPAN: 30-100 YRS</p>
         <p class="class1">TOP SPEED: 45 KM/H</p>
         <p class="class1">WEIGHT: 3-6 T</p>
         <p class="class1">LENGTH: 6-9 M</p>
-        <br /><br />
+        <br><br>
 
         <p
           class="class1"
@@ -98,7 +98,7 @@
             alt="canada on globe"
             width="30%"
             height="30%"
-          />
+          >
         </div>
 
         <div class="class5">
@@ -108,7 +108,7 @@
           alt="killer whale"
           width="50%"
           height="50%"
-        />
+        >
           <div>
             <h1>Habits and Lifestyle</h1>
             <p>
@@ -130,7 +130,7 @@
           alt="killer whale"
           width="35%"
           height="35%"
-        />
+        >
         </div>
         
         <div class="class9">
@@ -140,7 +140,7 @@
           alt="killer whale"
           width="40%"
           height="40%"
-        />
+        >
           <div>
             <h1>Population</h1>
             <h2>Population Numbers</h2>
@@ -184,7 +184,7 @@
           alt="killer whale"
           width="40%"
           height="40%"
-        />
+        >
         </div>
       </div>
       <script src="JS/animal.js"></script>
