project phase 2 and 3

--- a/Arctic Hare.html
+++ b/Arctic Hare.html
@@ -192,7 +192,7 @@
         >
         </div>
       </div>
-      <script src="JS/animal.js"></script>
+      <script src="script/animal.js"></script>
     </section>
     <div class="footerclass"></div>
   </body>
