--- a/Arctic Fox.html
+++ b/Arctic Fox.html
@@ -244,7 +244,7 @@
         >
         </div>
       </div>
-      <script src="JS/animal.js"></script>
+      <script src="script/animal.js"></script>
     </section>
     <div class="footerclass"></div>
   </body>
